--- a/style.css
+++ b/style.css
@@ -3,5 +3,90 @@
 * {
     margin: 0;
     padding: 0;
+}
+
+header {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.img-wrapper{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: #000;
+}
+
+.img-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5;
+    animation: zoom 20s;
+}
+
+@keyframes zoom {
+    0%{
+        transform: scale(1.3);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+
+.banner {
+    position: absolute;
+    top: 30%;
+    left: 5%;
+}
+
+.banner h1 {
+    color: white;
+    font-size: 2.5rem;
+    font-family: "Baloo 2", serif;
+    font-weight: 200;
+    text-shadow: .3rem .4rem 2px rgba(121, 120, 120, 0.219);
+    line-height: 30px;
+    margin-bottom: 2.5rem;
+    opacity: 0;
+    animation: moveBanner 1s 0.5 forwards;
+}
+.banner p {
+    font-family: "Mulish", serif;
+    color: white;
+    font-size: 1.5rem;
+    text-shadow: .2rem .2rem rgba(121, 120, 120, 0.219) ;
+    margin-bottom: 1.5rem;
+    opacity: 0;
+    animation: moveBanner 1s 0.7s forwards;
+}
+
+.banner button{
+    font-family: "mulish", serif;
+    color: #fff;
+    font-size: 1rem;
+    letter-spacing: .1rem;
+    background: #bdc3c7;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #2c3e50, #bdc3c7);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #2c3e50, #bdc3c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    padding: 1rem 3rem ;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+    opacity: 0;
+    animation: moveBanner 1s 0.9s forwards;
 
 }
+
+@keyframes moveBanner {
+    0%{
+        transform: translateY(10rem) rotateY(-30deg);
+    }
+    100%{
+         transform: translateY(0) rotateY(0);
+         opacity: 1;
+    }
+}
+
