--- a/style.css
+++ b/style.css
@@ -3,8 +3,82 @@
 * {
     margin: 0;
     padding: 0;
+    list-style:none;
+    text-decoration: none;
+
 }
 
+:root {
+    --font-primary: "baloo 2", serif;
+    --font-secundary: "mulish", serif;
+    --font-action: "baloo 2", serif;
+}
+
+.hamburguer{
+    /*background-color: rgb(214, 0, 0);*/
+    width: 2rem;
+    height: 2rem;
+    position: fixed;
+    z-index: 999;
+    right: 2rem;
+    top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor: pointer;
+}
+
+.show-menu .hamburguer {
+    right: 16rem;
+}
+
+.line{
+    width: 100%;
+    height: .1rem;
+    background-color: white;
+    box-shadow: 0.1rem 0.1rem 1px gray;
+    transition: transform 1s;
+}
+
+.show-menu #line1 {
+    transform: rotate(45deg) translate(.3rem, .4rem);
+}
+
+.show-menu #line2{
+    opacity: 0;
+    visibility: hidden;
+}
+
+.show-menu #line3 {
+    transform: rotate(-45deg) translate(.3rem, -.45rem);
+}
+
+.hamburguer span{
+    position: absolute;
+    left: 3rem;
+    height: 2rem;
+    width: 6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: gray;
+    color: white;
+    font-family: var(--font-action);
+    opacity: 0;
+}
+.hamburguer span::before{
+    content: "";
+    position: absolute;
+    border-right: .5rem solid gray;
+    border-top: .5rem solid transparent;
+    border-left: .5rem solid transparent;
+    border-bottom: .5rem solid transparent;
+    left: -1rem;
+}
+
+.show-menu .hamburguer:hover span{
+    opacity: 1;
+}
 header {
     width: 100%;
     height: 100vh;
@@ -45,7 +119,7 @@ header {
 .banner h1 {
     color: white;
     font-size: 2.5rem;
-    font-family: "Baloo 2", serif;
+    font-family: var(--font-primary);
     font-weight: 200;
     text-shadow: .3rem .4rem 2px rgba(121, 120, 120, 0.219);
     line-height: 30px;
@@ -54,7 +128,7 @@ header {
     animation: moveBanner 1s 0.5 forwards;
 }
 .banner p {
-    font-family: "Mulish", serif;
+    font-family: var(--font-secundary);
     color: white;
     font-size: 1.5rem;
     text-shadow: .2rem .2rem rgba(121, 120, 120, 0.219) ;
@@ -64,7 +138,7 @@ header {
 }
 
 .banner button{
-    font-family: "mulish", serif;
+    font-family: var(--font-secundary);
     color: #fff;
     font-size: 1rem;
     letter-spacing: .1rem;
@@ -90,3 +164,59 @@ header {
     }
 }
 
+.sidebar{
+    width: 20rem;
+    height: 100vh;
+    background-color: rgb(255, 255, 255);
+    position: fixed;
+    top: 0;
+    right: -20rem;
+    transition: all 1s;
+}
+
+.show-menu .sidebar{
+    right: 0;
+}
+
+
+.menu {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.menu-item{
+    text-align: center;
+    margin-bottom: .5rem;
+}
+
+.menu-link {
+    font-family: var(--font-action);
+    font-size: 2rem;
+    color: #555;
+}
+
+.menu-link:hover{
+    color: #6a3093;
+}
+
+.social-midia{
+    background-color: rgb(255, 255, 255);
+    position: absolute;
+    bottom: 2rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.social-midia i{
+    color: gray;
+    height: 2.5rem;
+    width:  2.5rem;
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
